docs: update existing documentation for heap-based architecture
Update CLAUDE.md with concurrency model and FFM roadmap
Update README.md with current storage approach
Update ARCHITECTURE.md with heap-based implementation details
Update DEVELOPMENT.md with concurrency guidelines
Update QUERY.md with correct package references
Update SPRING_DATA.md fixing package path typos
Update design docs (selection.md, storage.md) removing SIMD/FFM references
Update troubleshooting.md removing SIMD-related content
Update examples/ecommerce-domain.md to reflect actual implementation